# device-manager-poc

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
app/: settings.py  urls.py
devices/: admin.py  api.py  exceptions.py  models.py  serializers.py
devices/migrations/: 0001_initial.py
dwellings/: admin.py  api.py  apps.py  models.py  serializers.py
dwellings/migrations/: 0001_initial.py
hubs/: admin.py  api.py  models.py  serializers.py
hubs/migrations/: 0001_initial.py
utils/: mixins.py
