[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuel Urgell",email = "manuel.urgell@outlook.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pep8-naming = "^0.15.1"
pre-commit = "^4.2.0"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
